<resources>
    <string name="app_name">Feedback2</string>
    <string name="uax_logo_alt">UAX logo</string>
    <string name="button_start_game">Start game</string>
    <string name="button_profile">Profile</string>
    <string name="title_about_menu">About</string>
    <string name="night_mode">Night-mode</string>
    <string name="lang_mode">Language</string>
    <string name="game_instructions_text">You will see some country flags and you have to guess the country of each one.</string>
    <string name="game_instructions_title">Instructions</string>
    <string name="ok_button">OK</string>
    <string name="info_lang">Remember than if you switch the locale to ES, you can also use the Spanish version</string>
    <string name="info_popup">Info</string>
    <string name="score_title">Score</string>
    <string name="flagimage">flagImage</string>
    <string name="score_text">Score: </string>
    <string name="game_finished_title_score">Game finished! Your score is:</string>
    <string name="your_score_is">"Your score is: "</string>
    <string name="go_back">Go back</string>
    <string name="no_score">No score</string>
    <string name="light_mode">Light mode</string>
    <string name="about_dialog_title">About</string>
    <string name="dialog_about_message">App done for the Feedback1 of the UAX</string>
    <string name="share_score_text">My score on this game was: </string>
    <string name="share_button">Share</string>
    <string name="title_settings_menu">Settings</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_map_marker">Marker in Madrid</string>
    <string name="location_button_clicked">Moving to user location...</string>
    <string name="current_location_user">Current location:\n</string>
    <string name="title_activity_login">My Login Activity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="log_in_button">Log in</string>
    <string name="where_am_i_button">where am I?</string>

    <!-- Mock users for autocomplete on login page -->
    <string-array name="users_autocompletion">
        <item>user1</item>
        <item>user2</item>
        <item>user3</item>
    </string-array>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Mis</string>
    <string name="sync_header">Date</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature in the Main activity</string>
    <string name="logo_setting_title">Default logo on Main activity</string>

    <!-- Sync Preferences -->
    <string name="date_title">Show current date in Main activity</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="signature_text">You have no signature yet (Add it in Settings)</string>
    <string name="title_activity_tabbed">TabbedActivity</string>
    <string name="tab_text_1">Memes</string>
    <string name="tab_text_2">Quotes</string>
    <string name="mem_text">Here we would have some memes for example.</string>
    <string name="quotes_text">Here we would have quotes for example.</string>
    <string name="tabs">Tabs</string>
    <string name="date_main">Date is: </string>
    <string name="signature_textt">Your signature is: </string>
</resources>