<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/logo_uax_main_menu"
            android:contentDescription="@string/uax_logo_alt" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <Button
                android:id="@+id/button_start_game"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_start_game" />

            <Button
                android:id="@+id/button_results"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_profile" />

            <Button
                android:id="@+id/button_maps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="where am I?" />

        </LinearLayout>

    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>